# cuda-spatial-intelligence-lab

./: .gitignore  README.md
.cursor/: AGENTS.md
.cursor/agents/: cpp20-tutor.md  cuda-code-reviewer.md  cuda-perf-profiler.md  cuda-tutor.md  curriculum-mentor.md  dgx-spark-engineer.md  excalidraw-visualizer.md  langchain-deepagents-architect.md  manim-tutor.md  model-deployer.md  nemo-engineer.md  spatial-intel-researcher.md
.cursor/commands/: checkpoint.md  deploy-target.md  lab-report.md  profile-kernel.md  research-paper.md  review-cuda.md  start-lab.md  start-week.md
.cursor/rules/: project-context.mdc
.cursor/skills/cosmos-models/: SKILL.md
.cursor/skills/cpp20-modern-idioms/: SKILL.md
.cursor/skills/cuda-kernel-authoring/: SKILL.md
.cursor/skills/curriculum-plan/: SKILL.md  month-1-foundations.md  month-2-cuda-advanced.md  month-3-spatial-intelligence.md  month-4-production-deepagents.md
.cursor/skills/dgx-spark-setup/: SKILL.md
.cursor/skills/lab-notebook/: SKILL.md
.cursor/skills/langchain-deepagents-nextjs/: SKILL.md
.cursor/skills/nsight-profiling/: SKILL.md
.cursor/skills/python-bindings/: SKILL.md
.cursor/skills/sagemaker-bedrock-deploy/: SKILL.md
.cursor/skills/weekly-checkpoint/: SKILL.md
cmake/: CudaLab.cmake
docs/: CURSOR-DOCS.md  GETTING-STARTED.md  READING-GUIDE.excalidraw  READING-GUIDE.md  SYLLABUS.excalidraw  SYLLABUS.md  WORKFLOW.md
labs/: README.md
labs/_template/: CMakeLists.txt  GLOSSARY.md  LAB.md  README.md
labs/_template/bench/: bench_placeholder.cpp
labs/_template/src/: placeholder.cu
labs/_template/tests/: test_placeholder.cpp
labs/lab-00-an-even-easier-introduction-to-cuda/: README.md  nsys_easy  run_cu
labs/lab-01-hello-cuda/: CMakeLists.txt  GLOSSARY.md  LAB.md
labs/lab-01-hello-cuda/bench/: bench_axpy.cpp
labs/lab-01-hello-cuda/src/: axpy.cu  axpy.hpp  cuda_check.cpp  cuda_check.hpp  device_buffer.hpp  stream.cu  stream.hpp
labs/lab-02-tiled-gemm/: GLOSSARY.md  LAB.md
labs/lab-02-tiled-gemm/python/: README.md  gemm_ext.py  test_gemm.py
labs/lab-02-tiled-gemm/src/: gemm.hpp  gemm_naive.cu  gemm_pybind.cpp  gemm_tiled_32.cu  gemm_tiled_async.cu
labs/lab-02-tiled-gemm/tests/: test_gemm.cpp
labs/lab-03-reduce-scan/: GLOSSARY.md  LAB.md
labs/lab-03-reduce-scan/python/: README.md  reduce_scan_ext.py  test_reduce_scan.py
labs/lab-03-reduce-scan/src/: histogram.hpp  reduce.cu  reduce.hpp  scan.hpp
labs/lab-04-gemm-checkpoint/: GLOSSARY.md  LAB.md
labs/lab-04-gemm-checkpoint/python/: README.md  gemm_checkpoint_ext.py  test_gemm_checkpoint.py
labs/lab-04-gemm-checkpoint/src/: cutlass_baseline.cu  gemm_launch.cu
labs/lab-04-gemm-checkpoint/tests/: test_gemm_checkpoint.cpp
labs/week-00-an-even-easier-introduction-to-cuda/: main.cu
labs/week-01-hello-cuda/: GLOSSARY.md  LAB.md
labs/week-01-hello-cuda/tests/: test_axpy.cpp
labs/week-02-tiled-gemm/: CMakeLists.txt  GLOSSARY.md  LAB.md
labs/week-02-tiled-gemm/bench/: bench_gemm.cpp
labs/week-02-tiled-gemm/python/: test_gemm.py
labs/week-02-tiled-gemm/src/: gemm_launch.cu  gemm_tiled_64.cu
labs/week-03-reduce-scan/: CMakeLists.txt  LAB.md
labs/week-03-reduce-scan/bench/: bench_reduce_scan.cpp
labs/week-03-reduce-scan/python/: README.md
labs/week-03-reduce-scan/src/: histogram.cu  reduce_cub.cu  reduce_scan_pybind.cpp  scan.cu  scan_cub.cu
labs/week-03-reduce-scan/tests/: test_reduce_scan.cpp
labs/week-04-gemm-checkpoint/: CMakeLists.txt
labs/week-04-gemm-checkpoint/bench/: bench_gemm_checkpoint.cpp
labs/week-04-gemm-checkpoint/python/: README.md
labs/week-04-gemm-checkpoint/src/: gemm.hpp  gemm_pybind.cpp  gemm_v4_checkpoint.cu
